<resources>
    <string name="app_name">Coniolabs</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_hint">Sign in to continue</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>
