<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorffffff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:padding="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_launcher_background"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorffffff"
                android:layout_gravity="center"
                android:layout_marginBottom="80dp"
                android:layout_marginTop="40dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/color000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_hint"
                android:textAlignment="center"
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:textColor="@color/color000000"/>

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_form_inactive"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="15dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorafacb1"
                android:textColor="@color/color000000"
                android:hint="@string/email"/>

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_form_inactive"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorafacb1"
                android:textColor="@color/color000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorff3d3f"/>

            <Button
                android:id="@+id/signInBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:background="@drawable/bg_btn_inactive"
                android:textColor="@color/colorffffff"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:enabled="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="80dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new_user"
                    android:textAlignment="textEnd"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_up"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:textColor="@color/colorff3d3f"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>